--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
 <!-- The merge tag can be used to eliminate redundant layouts when
      including layouts, and it's a good idea to use it.
      See: https://developer.android.com/training/improving-layouts/reusing-layouts -->
+<layout>
 
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -30,3 +31,4 @@
         app:navGraph="@navigation/navigation" />
 
 </merge>
+</layout>
